--- a/index.html
+++ b/index.html
@@ -65,20 +65,21 @@
               <small>Undergraduate Student</small>
             </h3>
           <p>
-              <a href="https://www.hku.hk">The University of Hong Kong</a>,<br>
-              <a href="https://scholar.google.com/citations?user=_yo65ZgAAAAJ&hl=en">Google Scholar</a>,<br>
+              <a href="https://www.hku.hk">The University of Hong Kong</a><br>
+              <a href="https://scholar.google.com/citations?user=_yo65ZgAAAAJ&hl=en">Google Scholar</a><br>
           </p>
           <p>Email: eciel (AT) connect.hku.hk</p>
           </div>
 
           <div style="margin-top:40px" class="col-lg-10 mx-auto">
-              <h4>Short Bio</h4>
+              <h4>Hello!</h4>
               <p class="lead">
-                Hello! I am a final-year undergraduate student at <a href="https://www.hku.hk">the University of Hong Kong (HKU)</a>.
+                I am a final-year undergraduate student at <a href="https://www.hku.hk">the University of Hong Kong (HKU)</a>.
                 I am working on large language models and interpretable machine learning.
                 Previously, I was fortunate to work with <a href="https://www.byronwallace.com">Byron Wallace</a> during my exchange at <a href="https://www.northeastern.edu">Northeastern University (NEU)</a> and collaborated with <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> and <a href="https://yulequan.github.io">Lequan Yu</a> at HKU.
                 I also spend a wonderful time at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a> working with <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a>.
               </p>
+              </p> I am applying for 2024 fall PhD. If there is any possible collaboration, please contact me!
             </div>
         </div>
       </div>
@@ -91,12 +92,12 @@
               <h2>News</h2>
               <p style="margin-bottom: 25px"></p>
               <ul>
-              <li style="line-height: 20px; margin-bottom: 10px;">Aug. 3th, 2023 -  Ended my internship at Microsoft Research Asia.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Jun. 23th, 2018 - Two papers submitted to EMNLP 2023.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">May. 4th, 2023 - Attended and presented one paper at EACL 2023.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">April. 28th, 2023 - One paper accepted to BMC Bioinformatics.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Feb. 8th, 2023 -  Started an internship at Microsoft Research Asia.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Jan. 20th, 2023 - First paper accepted to EACL 2023.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Aug, 2023 -  Ended my internship at Microsoft Research Asia.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Jun, 2023 - Two papers submitted to EMNLP 2023.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">May, 2023 - Attended and presented one paper at EACL 2023.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">April, 2023 - One paper accepted to BMC Bioinformatics.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Feb, 2023 -  Started an internship at Microsoft Research Asia.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Jan, 2023 - First paper accepted to EACL 2023.</li>
               <li style="line-height: 20px; margin-bottom: 10px;">May. 8th, 2022 - Start point for my research!</li>
               </ul>
             </div>
