--- a/index.html
+++ b/index.html
@@ -159,6 +159,21 @@
       </section>
 
 
+      <section id="talks" class="bg-light">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-10 mx-auto">
+              <h2>Personal Interest</h2>
+              <p style="margin-bottom: 25px"></p>
+              <ul>
+              </p> I am interested in all kinks of sports and spend most of my spare time on that! I am particularly interested in diving (scuba and free), basketball, surfing and roller skating.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
 
     <!-- Footer -->
     <footer class="py-5 bg-dark">
