--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 I am a final-year undergraduate student at <a href="https://www.hku.hk">the University of Hong Kong (HKU)</a>.
                 I am working on large language models and interpretable machine learning.
                 Previously, I was fortunate to work with <a href="https://www.byronwallace.com">Byron Wallace</a> during my exchange at <a href="https://www.northeastern.edu">Northeastern University (NEU)</a> and collaborated with <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> and <a href="https://yulequan.github.io">Lequan Yu</a> at HKU.
-                I also spend a wonderful time at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a> working with <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a>.
+                I also spent a wonderful time at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a> working with <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a>.
               </p>
               </p> I am applying for 2024 fall PhD. If there is any possible collaboration, please contact me!
             </div>
@@ -166,7 +166,7 @@
               <h2>Personal Interest</h2>
               <p style="margin-bottom: 25px"></p>
               <ul>
-              </p> I am interested in all kinks of sports and spend most of my spare time on that! I am particularly interested in diving (scuba and free), basketball, surfing and roller skating.</li>
+              </p> I am interested in various sports and spend most of my spare time on it! I am particularly interested in diving (scuba and free), basketball, surfing, and roller skating.</li>
               </ul>
             </div>
           </div>
@@ -181,7 +181,7 @@
         <p class="m-0 text-center text-white">Copyright &copy; Jinghan Yang 2023</p>
         <p class="m-0 text-center text-white">
             <!-- Start of CuterCounter Code -->
-            Page Views: <a href="http://www.cutercounter.com/" target="_blank"><img src="http://www.cutercounter.com/hit.php?id=gmvfkoqa&nd=6&style=14" border="0" alt="hit counter"></a>
+            Page Views: <a href="https://www.cutercounter.com/" target="_blank"><img src="https://www.cutercounter.com/hits.php?id=hexnqcdp&nd=9&style=5" border="0" alt="hit counter"></a>
             <!-- End of CuterCounter Code -->
         </p>
       </div>
