--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
               <a class="nav-link js-scroll-trigger" href="#publication">Publications</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#talks">Talks</a>
+              <a class="nav-link js-scroll-trigger" href="#activities">Activities</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#interest">Others</a>
             </li>
           </ul>
         </div>
@@ -92,8 +98,8 @@
               <h2>News</h2>
               <p style="margin-bottom: 25px"></p>
               <ul>
+              <li style="line-height: 20px; margin-bottom: 10px;">Sep, 2023 -  Joined HKUST as a research assistant.</li>
               <li style="line-height: 20px; margin-bottom: 10px;">Aug, 2023 -  Ended my internship at Microsoft Research Asia.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Jun, 2023 - Two papers submitted to EMNLP 2023.</li>
               <li style="line-height: 20px; margin-bottom: 10px;">May, 2023 - Attended and presented one paper at EACL 2023.</li>
               <li style="line-height: 20px; margin-bottom: 10px;">April, 2023 - One paper accepted to BMC Bioinformatics.</li>
               <li style="line-height: 20px; margin-bottom: 10px;">Feb, 2023 -  Started an internship at Microsoft Research Asia.</li>
@@ -151,12 +157,35 @@
               <h2>Academic Activities</h2>
               <p style="margin-bottom: 25px"></p>
               <ul>
-              <li>Microsoft Research Asia Intern Tech Talk</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">July, 2023 - Microsoft Research Asia Intern Tech Talk at Beijing</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">May, 2023 - Attended and presented one paper at EACL 2023 at Dubrovnik</li>
               </ul>       
             </div>
           </div>
         </div>
       </section>
+
+    <section id="experience">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <h2>Education and Experience</h2>
+            <p style="margin-bottom: 25px"></p>
+            <ul>
+              <li style="line-height: 20px; margin-bottom: 10px;">Research Assistant, The Hong Kong University of Science and Technology, Sep. 2023 -  <br> Advisor: Dr. <a href="https://jxhe.github.io">Junxian He</a> </li>
+            <li style="line-height: 20px; margin-bottom: 10px;">Research Intern, Microsoft Research Asia, Feb. 2023 - Aug. 2023.  <br> Mentor: <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> </li>
+            <li style="line-height: 20px; margin-bottom: 10px;">Summer Research Assistant, The University of Hong Kong, May. 2022 - Aug. 2022  <br> Advisor: Dr. <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a></li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Exchange Student, Northeastern University, Jan. 2022 - May. 2022. <br> Advisor: Dr. <a href="https://www.byronwallace.com">Byron Wallace</a></li>
+            <li style="line-height: 20px; margin-bottom: 10px;">Summer School, Peking University, June. 2021 - Jul. 2021.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Algorithm Engineer Intern, MINIVISION, June. 2021 - Aug. 2021.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Quantitative Research Intern, Ipsos Consulting, June. 2020 - Aug. 2020.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Bachelor of Science, The University of Hong Kong, Sept. 2020 - Jul. 2024.</li>
+            <li style="line-height: 20px; margin-bottom: 10px;">Bachelor of Business Administration, The University of Hong Kong, Sept. 2019 - Jul. 2020.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
       <section id="talks" class="bg-light">
@@ -166,7 +195,7 @@
               <h2>Personal Interest</h2>
               <p style="margin-bottom: 25px"></p>
               <ul>
-              </p> I am interested in various sports and spend most of my spare time on it! I am particularly interested in diving (scuba and free), basketball, surfing, and roller skating.</li>
+              </p> I am interested in various sports and spend most of my spare time on it! I am particularly interested in diving (scuba and free), basketball, Hip-hop dance, surfing, and roller skating.</li>
               </ul>
             </div>
           </div>
