--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@
             <p style="margin-bottom: 25px"></p>
             <ul>
               <li style="line-height: 20px; margin-bottom: 10px;">Research Assistant, The Hong Kong University of Science and Technology, Sep. 2023 -  <br> Advisor: Dr. <a href="https://jxhe.github.io">Junxian He</a> </li>
-            <li style="line-height: 20px; margin-bottom: 10px;">Research Intern, Microsoft Research Asia, Feb. 2023 - Aug. 2023.  <br> Mentor: <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> </li>
+            <li style="line-height: 20px; margin-bottom: 10px;">Research Intern, Microsoft Research Asia, Feb. 2023 - Aug. 2023  <br> Mentor: <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> </li>
             <li style="line-height: 20px; margin-bottom: 10px;">Summer Research Assistant, The University of Hong Kong, May. 2022 - Aug. 2022  <br> Advisor: Dr. <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a></li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Exchange Student, Northeastern University, Jan. 2022 - May. 2022. <br> Advisor: Dr. <a href="https://www.byronwallace.com">Byron Wallace</a></li>
-            <li style="line-height: 20px; margin-bottom: 10px;">Summer School, Peking University, June. 2021 - Jul. 2021.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Algorithm Engineer Intern, MINIVISION, June. 2021 - Aug. 2021.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Quantitative Research Intern, Ipsos Consulting, June. 2020 - Aug. 2020.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Bachelor of Science, The University of Hong Kong, Sept. 2020 - Jul. 2024.</li>
-            <li style="line-height: 20px; margin-bottom: 10px;">Bachelor of Business Administration, The University of Hong Kong, Sept. 2019 - Jul. 2020.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Exchange Student, Northeastern University, Jan. 2022 - May. 2022 <br> Advisor: Dr. <a href="https://www.byronwallace.com">Byron Wallace</a></li>
+            <li style="line-height: 20px; margin-bottom: 10px;">Summer School, Peking University, June. 2021 - Jul. 2021</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Algorithm Engineer Intern, MINIVISION, June. 2021 - Aug. 2021</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Quantitative Research Intern, Ipsos Consulting, June. 2020 - Aug. 2020</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Bachelor of Science, The University of Hong Kong, Sept. 2020 - Jul. 2024</li>
+            <li style="line-height: 20px; margin-bottom: 10px;">Bachelor of Business Administration, The University of Hong Kong, Sept. 2019 - Jul. 2020</li>
             </ul>
           </div>
         </div>
