--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
           </div>
 
           <div style="margin-top:40px" class="col-lg-10 mx-auto">
-              <h4>Hello!</h4>
+              <h4>Hello ^.^</h4>
               <p class="lead">
-                I am a final-year undergraduate student at <a href="https://www.hku.hk">the University of Hong Kong (HKU)</a>.
-                I am working on large language models and interpretable machine learning.
+                I am a final-year undergraduate student at <a href="https://www.hku.hk">The University of Hong Kong (HKU)</a>, working on large language models and interpretable machine learning.
+              </p>
+                I am currently working as a research assistant at <a href="https://hkust.edu.hk">The Hong Kong University of Science and Technology (HKUST) </a> with <a href="https://jxhe.github.io">Junxian He</a>.
                 Previously, I was fortunate to work with <a href="https://www.byronwallace.com">Byron Wallace</a> during my exchange at <a href="https://www.northeastern.edu">Northeastern University (NEU)</a> and collaborated with <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> and <a href="https://yulequan.github.io">Lequan Yu</a> at HKU.
                 I also spent a wonderful time at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a> working with <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a>.
               </p>
@@ -157,8 +158,8 @@
               <h2>Academic Activities</h2>
               <p style="margin-bottom: 25px"></p>
               <ul>
-              <li style="line-height: 20px; margin-bottom: 10px;">July, 2023 - Microsoft Research Asia Intern Tech Talk at Beijing</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">May, 2023 - Attended and presented one paper at EACL 2023 at Dubrovnik</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">14/07/2023 - Microsoft Research Asia Intern Tech Talk, Beijing</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">04/05/2023 - Attended and presented one paper at EACL 2023, Dubrovnik</li>
               </ul>       
             </div>
           </div>
