--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#interest">Others</a>
+              <a class="nav-link js-scroll-trigger" href="#others">Others</a>
             </li>
           </ul>
         </div>
@@ -68,17 +68,17 @@
           <div style="margin-top:40px" class="col-xs-12 col-sm-6">
             <h3>
               Jinghan Yang (杨景涵) <br>
-              <small>Undergraduate Student</small>
+              <small>Undergraduate Student at The University of Hong Kong</small>
             </h3>
           <p>
-              <a href="https://www.hku.hk">The University of Hong Kong</a><br>
               <a href="https://scholar.google.com/citations?user=_yo65ZgAAAAJ&hl=en">Google Scholar</a><br>
+              <a href="https://twitter.com/eciel_yang">Twitter</a><br>
           </p>
           <p>Email: eciel (AT) connect.hku.hk</p>
           </div>
 
           <div style="margin-top:40px" class="col-lg-10 mx-auto">
-              <h4>Hello ^.^</h4>
+              <h4>Hello!</h4>
               <p class="lead">
                 I am a final-year undergraduate student at <a href="https://www.hku.hk">The University of Hong Kong (HKU)</a>, working on large language models and interpretable machine learning.
               </p>
@@ -151,7 +151,7 @@
 
 
 
-    <section id="talks" class="bg-light">
+    <section id="activities" class="bg-light">
         <div class="container">
           <div class="row">
             <div class="col-lg-10 mx-auto">
@@ -189,7 +189,7 @@
     </section>
 
 
-      <section id="talks" class="bg-light">
+      <section id="others" class="bg-light">
         <div class="container">
           <div class="row">
             <div class="col-lg-10 mx-auto">
