--- a/index.html
+++ b/index.html
@@ -189,19 +189,25 @@
     </section>
 
 
-      <section id="others" class="bg-light">
-        <div class="container">
-          <div class="row">
+ <section id="others" class="bg-light">
+    <div class="container">
+        <div class="row">
             <div class="col-lg-10 mx-auto">
-              <h2>Personal Interest</h2>
-              <p style="margin-bottom: 25px"></p>
-              <ul>
-              </p> I am interested in various sports and spend most of my spare time on it! I am particularly interested in diving (scuba and free), basketball, Hip-hop dance, surfing, and roller skating.</li>
-              </ul>
+                <h2>Personal Interest</h2>
+                <p>I am interested in various sports and spend most of my spare time on it! I am particularly interested in diving (scuba and free), basketball, Hip-hop dance, surfing, roller skating, and hiking.</p>
+
+                <!-- Images below the text -->
+                <div style="display: flex; align-items: center; justify-content: center;">
+                    <img src="assets/basketball.jpg" style="width:25%; margin: 0;"><img src="assets/diving.jpg" style="width:25%; margin: 0;"><img src="assets/skating.jpg" style="width:25%; margin: 0;"><img src="assets/hiking.jpg" style="width:25%; margin: 0;">
+                </div>
+
+
+
             </div>
-          </div>
         </div>
-      </section>
+    </div>
+</section>
+
 
 
 
