--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <li style="line-height: 20px; margin-bottom: 20px;">
                 ERStruct: a fast Python package for inferring the number of top principal components from whole genome sequencing data
                   <br>
-                <strong>Jinghan Yang</strong>, Yuyang Xu, Minhao Yao, Gao Wang, Zhonghua Liu<br>
+                <strong>Jinghan Yang*</strong>, Yuyang Xu*, Minhao Yao, Gao Wang, Zhonghua Liu<br>
                 <strong>BMC bioinformatics</strong> 2023
                 <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-023-05305-0">[pdf]</a>
             </li>
@@ -160,6 +160,9 @@
               <ul>
               <li style="line-height: 20px; margin-bottom: 10px;">14/07/2023 - Microsoft Research Asia Intern Tech Talk, Beijing</li>
               <li style="line-height: 20px; margin-bottom: 10px;">04/05/2023 - Attended and presented one paper at EACL 2023, Dubrovnik</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">2023-2024 - Serve as Student Experiential Learning Ambassador at HKU</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">2023-2024 - Serve as reviewer for HKU BrainSTEM Scientific Journal</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">2020-2022 - Serve as Student Peer Advisor at HKU</li>
               </ul>       
             </div>
           </div>
