--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
             <p style="margin-bottom: 25px"></p>
             <ol>
             <li style="line-height: 20px; margin-bottom: 20px;">
+                Auto-ICL: In-Context Learning without Human Supervision
+                  <br>
+                <strong>Jinghan Yang</strong>, Shuming Ma, Furu Wei<br>
+                <strong>Preprint</strong> 2023
+                <a href="https://arxiv.org/pdf/2311.09263.pdf">[pdf]</a>
+            </li>
+            <li style="line-height: 20px; margin-bottom: 20px;">
                 Relabeling Minimal Training Subset to Flip a Prediction
                   <br>
                 <strong>Jinghan Yang</strong>, Linjie Xu, Lequan Yu<br>
