--- a/index.html
+++ b/index.html
@@ -71,22 +71,18 @@
               <small>Undergraduate Student at The University of Hong Kong</small>
             </h3>
           <p>
+              Email: eciel (AT) connect.hku.hk <br>
               <a href="https://scholar.google.com/citations?user=_yo65ZgAAAAJ&hl=en">Google Scholar</a><br>
               <a href="https://twitter.com/eciel_yang">Twitter</a><br>
           </p>
-          <p>Email: eciel (AT) connect.hku.hk</p>
           </div>
 
           <div style="margin-top:40px" class="col-lg-10 mx-auto">
-              <h4>Hello!</h4>
               <p class="lead">
-                I am a final-year undergraduate student at <a href="https://www.hku.hk">The University of Hong Kong (HKU)</a>, working on large language models and interpretable machine learning.
+                Hello! I am a final-year undergraduate student working on large language models and interpretable machine learning.
               </p>
-                I am currently working as a research assistant at <a href="https://hkust.edu.hk">The Hong Kong University of Science and Technology (HKUST) </a> with <a href="https://jxhe.github.io">Junxian He</a>.
-                Previously, I was fortunate to work with <a href="https://www.byronwallace.com">Byron Wallace</a> during my exchange at <a href="https://www.northeastern.edu">Northeastern University (NEU)</a> and collaborated with <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> and <a href="https://yulequan.github.io">Lequan Yu</a> at HKU.
-                I also spent a wonderful time at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a> working with <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a>.
+                I'm working as a research assistant at HKUST with <a href="https://jxhe.github.io">Junxian He</a>. I've advised by <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a> and <a href="https://yulequan.github.io">Lequan Yu</a> at HKU. I'm really grateful to <a href="https://www.byronwallace.com">Byron Wallace</a> and <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> for introducing me to research, especially when I had no prior experience.
               </p>
-              </p> I am applying for 2024 fall PhD. If there is any possible collaboration, please contact me!
             </div>
         </div>
       </div>
@@ -99,12 +95,13 @@
               <h2>News</h2>
               <p style="margin-bottom: 25px"></p>
               <ul>
-              <li style="line-height: 20px; margin-bottom: 10px;">Sep, 2023 -  Joined HKUST as a research assistant.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Aug, 2023 -  Ended my internship at Microsoft Research Asia.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">May, 2023 - Attended and presented one paper at EACL 2023.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">April, 2023 - One paper accepted to BMC Bioinformatics.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Feb, 2023 -  Started an internship at Microsoft Research Asia.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Jan, 2023 - First paper accepted to EACL 2023.</li>
+                  <li style="line-height: 20px; margin-bottom: 10px;">Dec. 2023 - Attended EMNLP 2023.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Sep. 2023 -  Joined HKUST as a research assistant.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Aug. 2023 -  Ended my internship at Microsoft Research Asia.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">May 2023 - Attended and presented one paper at EACL 2023.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">April 2023 - One paper accepted to BMC Bioinformatics.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Feb. 2023 -  Started an internship at Microsoft Research Asia.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Jan. 2023 - First paper accepted to EACL 2023.</li>
               <li style="line-height: 20px; margin-bottom: 10px;">May. 8th, 2022 - Start point for my research!</li>
               </ul>
             </div>
