--- a/index.html
+++ b/index.html
@@ -78,11 +78,16 @@
           </div>
 
           <div style="margin-top:40px" class="col-lg-10 mx-auto">
-              <p class="lead">
+              <p>
                 Hello! I am a final-year undergraduate student working on large language models and interpretable machine learning.
-              </p>
                 I'm working as a research assistant at HKUST with <a href="https://jxhe.github.io">Junxian He</a>. I've advised by <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a> and <a href="https://yulequan.github.io">Lequan Yu</a> at HKU. I'm really grateful to <a href="https://www.byronwallace.com">Byron Wallace</a> and <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> for introducing me to research, especially when I had no prior experience.
               </p>
+
+<p style="margin: 20px 0; padding: 10px; border: 2px solid #4A90E2; text-indent: 10px; font-family: Georgia, serif; font-size: 16px; color: #333; background-color: #f9f9f9; line-height: 1.6; box-shadow: 2px 2px 5px rgba(0,0,0,0.1);">
+    In the long term, I aim in Autonomous Developmental AI: For pre-trained models already possessing substantial inherent abilities, can they autonomously improve their skills when given a broad objective?
+</p>
+
+
             </div>
         </div>
       </div>
