--- a/index.html
+++ b/index.html
@@ -100,13 +100,10 @@
               <h2>News</h2>
               <p style="margin-bottom: 25px"></p>
               <ul>
-                  <li style="line-height: 20px; margin-bottom: 10px;">Dec. 2023 - Attended EMNLP 2023.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Jan. 2024 - One paper accepted to EACL 2024 findings.</li>
+              <li style="line-height: 20px; margin-bottom: 10px;">Dec. 2023 - Attended EMNLP 2023.</li>
               <li style="line-height: 20px; margin-bottom: 10px;">Sep. 2023 -  Joined HKUST as a research assistant.</li>
               <li style="line-height: 20px; margin-bottom: 10px;">Aug. 2023 -  Ended my internship at Microsoft Research Asia.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">May 2023 - Attended and presented one paper at EACL 2023.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">April 2023 - One paper accepted to BMC Bioinformatics.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Feb. 2023 -  Started an internship at Microsoft Research Asia.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Jan. 2023 - First paper accepted to EACL 2023.</li>
               <li style="line-height: 20px; margin-bottom: 10px;">May. 8th, 2022 - Start point for my research!</li>
               </ul>
             </div>
@@ -125,14 +122,14 @@
                 Auto-ICL: In-Context Learning without Human Supervision
                   <br>
                 <strong>Jinghan Yang</strong>, Shuming Ma, Furu Wei<br>
-                <strong>Preprint</strong> 2023
+                <strong>Preprint</strong>
                 <a href="https://arxiv.org/pdf/2311.09263.pdf">[pdf]</a>
             </li>
             <li style="line-height: 20px; margin-bottom: 20px;">
                 Relabeling Minimal Training Subset to Flip a Prediction
                   <br>
                 <strong>Jinghan Yang</strong>, Linjie Xu, Lequan Yu<br>
-                <strong>Preprint</strong> 2023
+                <strong>EACL</strong> 2024 (findings)
                 <a href="https://arxiv.org/pdf/2305.12809.pdf">[pdf]</a>
             </li>
 
