--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div style="margin-top:40px" class="col-lg-10 mx-auto">
               <p>
                 Hello! I am a final-year undergraduate student working on large language models and interpretable machine learning.
-                I'm working as a research assistant at HKUST with <a href="https://jxhe.github.io">Junxian He</a>. I've advised by <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a> and <a href="https://yulequan.github.io">Lequan Yu</a> at HKU. I'm really grateful to <a href="https://www.byronwallace.com">Byron Wallace</a> and <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> for introducing me to research, especially when I had no prior experience.
+                I've advised by <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a>, <a href="https://yulequan.github.io">Lequan Yu</a> at HKU and <a href="https://jxhe.github.io">Junxian He</a> at HKUST. I'm really grateful to <a href="https://www.byronwallace.com">Byron Wallace</a> and <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> for introducing me to research, especially when I had no prior experience.
               </p>
 
 <!--<p style="margin: 20px 0; padding: 10px; border: 2px solid #4A90E2; text-indent: 10px; font-family: Georgia, serif; font-size: 16px; color: #333; background-color: #f9f9f9; line-height: 1.6; box-shadow: 2px 2px 5px rgba(0,0,0,0.1);">-->
@@ -93,23 +93,23 @@
       </div>
     </section>
 
-    <section id="news">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-10 mx-auto">
-              <h2>News</h2>
-              <p style="margin-bottom: 25px"></p>
-              <ul>
-              <li style="line-height: 20px; margin-bottom: 10px;">Jan. 2024 - One paper accepted to EACL 2024 findings.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Dec. 2023 - Attended EMNLP 2023.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Sep. 2023 -  Joined HKUST as a research assistant.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">Aug. 2023 -  Ended my internship at Microsoft Research Asia.</li>
-              <li style="line-height: 20px; margin-bottom: 10px;">May. 8th, 2022 - Start point for my research!</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
+<!--    <section id="news">-->
+<!--        <div class="container">-->
+<!--          <div class="row">-->
+<!--            <div class="col-lg-10 mx-auto">-->
+<!--              <h2>News</h2>-->
+<!--              <p style="margin-bottom: 25px"></p>-->
+<!--              <ul>-->
+<!--              <li style="line-height: 20px; margin-bottom: 10px;">Jan. 2024 - One paper accepted to EACL 2024 findings.</li>-->
+<!--              <li style="line-height: 20px; margin-bottom: 10px;">Dec. 2023 - Attended EMNLP 2023.</li>-->
+<!--              <li style="line-height: 20px; margin-bottom: 10px;">Sep. 2023 -  Joined HKUST as a research assistant.</li>-->
+<!--              <li style="line-height: 20px; margin-bottom: 10px;">Aug. 2023 -  Ended my internship at Microsoft Research Asia.</li>-->
+<!--              <li style="line-height: 20px; margin-bottom: 10px;">May. 8th, 2022 - Start point for my research!</li>-->
+<!--              </ul>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </section>-->
     
     <section id="publication" class="bg-light">
       <div class="container">
@@ -183,7 +183,7 @@
             <p style="margin-bottom: 25px"></p>
             <ul>
                 <h4>Experience</h4>
-                <li style="line-height: 20px; margin-bottom: 10px;">Research Assistant, The Hong Kong University of Science and Technology, Sep. 2023 -  <br> Advisor: Dr. <a href="https://jxhe.github.io">Junxian He</a> </li>
+                <li style="line-height: 20px; margin-bottom: 10px;">Research Assistant, The Hong Kong University of Science and Technology, Sep. 2023 - Jan. 2024  <br> Advisor: Dr. <a href="https://jxhe.github.io">Junxian He</a> </li>
                 <li style="line-height: 20px; margin-bottom: 10px;">Research Intern, Microsoft Research Asia, Feb. 2023 - Aug. 2023  <br> Mentor: <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> </li>
                 <li style="line-height: 20px; margin-bottom: 10px;">Overseas Research Program, Northeastern University, Aug. 2022 - Nov. 2022 <br> Advisor: Dr. <a href="https://www.byronwallace.com">Byron Wallace</a></li>
                 <li style="line-height: 20px; margin-bottom: 10px;">Summer Research Assistant, The University of Hong Kong, May. 2022 - Aug. 2022  <br> Advisor: Dr. <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a></li>
