--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#news">News</a>
-            </li>
+<!--            <li class="nav-item">-->
+<!--                <a class="nav-link js-scroll-trigger" href="#news">News</a>-->
+<!--            </li>-->
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#publication">Publications</a>
             </li>
@@ -52,7 +52,7 @@
       </div>
     </nav>
 
-    <section id="about" class="bg-light">
+    <section id="about">
       <div class="container">
         <div class="row">
 
@@ -79,7 +79,7 @@
 
           <div style="margin-top:40px" class="col-lg-10 mx-auto">
               <p>
-                Hello! I am a final-year undergraduate student working on large language models and interpretable machine learning.
+                Hello! I am working on large language models and interpretable machine learning.
                 I've advised by <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a>, <a href="https://yulequan.github.io">Lequan Yu</a> at HKU and <a href="https://jxhe.github.io">Junxian He</a> at HKUST. I'm really grateful to <a href="https://www.byronwallace.com">Byron Wallace</a> and <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> for introducing me to research, especially when I had no prior experience.
               </p>
 
@@ -88,9 +88,9 @@
 <!--</p>-->
 
 
-            </div>
-        </div>
-      </div>
+<!--            </div>-->
+<!--        </div>-->
+<!--      </div>-->
     </section>
 
 <!--    <section id="news">-->
@@ -116,7 +116,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h2>Publications</h2>
-            <p style="margin-bottom: 25px"></p>
+            <p style="margin-bottom: 2px"></p>
             <ol>
             <li style="line-height: 20px; margin-bottom: 20px;">
                 Auto-ICL: In-Context Learning without Human Supervision
@@ -155,9 +155,7 @@
       </div>
     </section>
 
-
-
-    <section id="activities" class="bg-light">
+    <section id="activities">
         <div class="container">
           <div class="row">
             <div class="col-lg-10 mx-auto">
