--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div style="margin-top:40px" class="col-lg-10 mx-auto">
               <p>
                 Hello! I am working on large language models and interpretable machine learning.
-                I've advised by <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a>, <a href="https://yulequan.github.io">Lequan Yu</a> at HKU and <a href="https://jxhe.github.io">Junxian He</a> at HKUST. I'm really grateful to <a href="https://www.byronwallace.com">Byron Wallace</a> and <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> for introducing me to research, especially when I had no prior experience.
+                I've been advised by <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a>, <a href="https://yulequan.github.io">Lequan Yu</a> at HKU and <a href="https://jxhe.github.io">Junxian He</a> at HKUST. I'm really grateful to <a href="https://www.byronwallace.com">Byron Wallace</a> and <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> for introducing me to research, especially when I had no prior experience.
               </p>
 
 <!--<p style="margin: 20px 0; padding: 10px; border: 2px solid #4A90E2; text-indent: 10px; font-family: Georgia, serif; font-size: 16px; color: #333; background-color: #f9f9f9; line-height: 1.6; box-shadow: 2px 2px 5px rgba(0,0,0,0.1);">-->
