--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div style="margin-top:40px" class="col-xs-12 col-sm-6">
             <h3>
               Jinghan Yang (杨景涵) <br>
-              <small>Undergraduate Student at The University of Hong Kong</small>
+              <small>MPhil Student at The University of Hong Kong</small>
             </h3>
           <p>
               Email: eciel (AT) connect.hku.hk <br>
@@ -84,7 +84,8 @@
                   During my Undergraduate study at HKU, I've been advised by <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a>, <a href="https://yulequan.github.io">Lequan Yu</a> at HKU and <a href="https://jxhe.github.io">Junxian He</a> at HKUST. I'm really grateful to <a href="https://www.byronwallace.com">Byron Wallace</a> and <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> for introducing me to research, especially when I had no prior experience.
               </p>
               <p>
-                  I am generally interested in Embodied AI and interpreting machine learning models via statistical tools. I am currently trying to enhance foundation models' ability to interact with the physical world.</p>
+                  I am generally interested in Embodied AI and interpretable machine learning.
+              </p>
 
 <!--<p style="margin: 20px 0; padding: 10px; border: 2px solid #4A90E2; text-indent: 10px; font-family: Georgia, serif; font-size: 16px; color: #333; background-color: #f9f9f9; line-height: 1.6; box-shadow: 2px 2px 5px rgba(0,0,0,0.1);">-->
 <!--    In the long term, I aim in Autonomous Developmental AI: For pre-trained models already possessing substantial inherent abilities, can they autonomously improve their skills when given a broad objective?-->
@@ -183,17 +184,19 @@
             <h2>Experience and Education</h2>
             <p style="margin-bottom: 25px"></p>
             <ul>
-                <h4>Experience</h4>
+                <h4>Internship Experience</h4>
+                <li style="line-height: 20px; margin-bottom: 10px;"> Research Intern, Microsoft Research Asia, Feb. 2023 - Aug. 2023  <br> Mentor: <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> </li>
+                <li style="line-height: 20px; margin-bottom: 10px;"> Algorithm Engineer Intern, MINIVISION, June. 2021 - Aug. 2021</li>
+                <li style="line-height: 20px; margin-bottom: 10px;"> Quantitative Research Intern, Ipsos Consulting, June. 2020 - Aug. 2020</li>
+                <h4>Visiting Experience</h4>
                 <li style="line-height: 20px; margin-bottom: 10px;">Research Assistant, The Hong Kong University of Science and Technology, Sep. 2023 - Jan. 2024  <br> Advisor: Dr. <a href="https://jxhe.github.io">Junxian He</a> </li>
-                <li style="line-height: 20px; margin-bottom: 10px;">Research Intern, Microsoft Research Asia, Feb. 2023 - Aug. 2023  <br> Mentor: <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> </li>
                 <li style="line-height: 20px; margin-bottom: 10px;">Overseas Research Program, Northeastern University, Aug. 2022 - Nov. 2022 <br> Advisor: Dr. <a href="https://www.byronwallace.com">Byron Wallace</a></li>
                 <li style="line-height: 20px; margin-bottom: 10px;">Summer Research Assistant, The University of Hong Kong, May. 2022 - Aug. 2022  <br> Advisor: Dr. <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a></li>
-                <li style="line-height: 20px; margin-bottom: 10px;">Algorithm Engineer Intern, MINIVISION, June. 2021 - Aug. 2021</li>
-                <li style="line-height: 20px; margin-bottom: 10px;"> Quantitative Research Intern, Ipsos Consulting, June. 2020 - Aug. 2020</li>
                 <h4>Education</h4>
+                <li style="line-height: 20px; margin-bottom: 10px;">Master of Philosophy, Institute of Data Science, The University of Hong Kong, Sept. 2024 - Now</li>
+                <li style="line-height: 20px; margin-bottom: 10px;">Bachelor of Science, Decision Analytics, The University of Hong Kong, Sept. 2020 - Jul. 2024</li>
                 <li style="line-height: 20px; margin-bottom: 10px;">Exchange Student, Northeastern University, Jan. 2022 - May. 2022</li>
                 <li style="line-height: 20px; margin-bottom: 10px;">Summer School, Peking University, June. 2021 - Jul. 2021</li>
-                <li style="line-height: 20px; margin-bottom: 10px;">Bachelor of Science, Decision Analytics, The University of Hong Kong, Sept. 2020 - Jul. 2024</li>
                 <li style="line-height: 20px; margin-bottom: 10px;">Bachelor of Business Administration, Accounting and Finance, The University of Hong Kong, Sept. 2019 - Jul. 2020</li>
             </ul>
           </div>
