--- a/index.html
+++ b/index.html
@@ -83,9 +83,17 @@
 
                   During my Undergraduate study at HKU, I've been advised by <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a>, <a href="https://yulequan.github.io">Lequan Yu</a> at HKU and <a href="https://jxhe.github.io">Junxian He</a> at HKUST. I'm really grateful to <a href="https://www.byronwallace.com">Byron Wallace</a> and <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> for introducing me to research, especially when I had no prior experience.
               </p>
-              <p>
-                  I am generally interested in Embodied AI and interpretable machine learning.
-              </p>
+                <p>
+                    I am generally interested in Embodied AI and interpretable machine learning. Specifically, I am working on:
+                    <ul>
+                        <li>Integrating perception, action, and reasoning ability in Embodied AI</li>
+                        <li>Flipping test predictions via modifying training points:
+                            <a href="https://arxiv.org/pdf/2305.12809.pdf">[Relabeling </a>,
+                            <a href="https://arxiv.org/abs/2302.02169">Removing]</a>
+                        </li>
+                    </ul>
+                </p>
+
 
 <!--<p style="margin: 20px 0; padding: 10px; border: 2px solid #4A90E2; text-indent: 10px; font-family: Georgia, serif; font-size: 16px; color: #333; background-color: #f9f9f9; line-height: 1.6; box-shadow: 2px 2px 5px rgba(0,0,0,0.1);">-->
 <!--    In the long term, I aim in Autonomous Developmental AI: For pre-trained models already possessing substantial inherent abilities, can they autonomously improve their skills when given a broad objective?-->
