--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   During my Undergraduate study at HKU, I've been advised by <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a>, <a href="https://yulequan.github.io">Lequan Yu</a> at HKU and <a href="https://jxhe.github.io">Junxian He</a> at HKUST. I'm really grateful to <a href="https://www.byronwallace.com">Byron Wallace</a> and <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> for introducing me to research, especially when I had no prior experience.
               </p>
                 <p>
-                    I am generally interested in Embodied AI and interpretable machine learning. Specifically, I am working on:
+                    I am interested in Embodied AI and interpretable machine learning. Specifically, I am working on:
                     <ul>
                         <li>Integrating perception, action, and reasoning ability in Embodied AI</li>
                         <li>Flipping test predictions via modifying training points:
