--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <div style="margin-top:40px" class="col-xs-12 col-sm-6">
             <h3>
               Jinghan Yang (杨景涵) <br>
+              <small>She/Her</small> <br>
               <small>MPhil Student at The University of Hong Kong</small>
             </h3>
           <p>
@@ -81,15 +82,11 @@
               <p>
                   Hello! I am a year-1 MPhil student at <a href="https://datascience.hku.hk">HKU Institute of Data Science </a> advised by <a href="https://yanchaoyang.github.io">Yanchao Yang</a> and <a href="http://luoping.me">Ping Luo</a>.
 
-                  During my Undergraduate study at HKU, I've been advised by <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a>, <a href="https://yulequan.github.io">Lequan Yu</a> at HKU and <a href="https://jxhe.github.io">Junxian He</a> at HKUST. I'm really grateful to <a href="https://www.byronwallace.com">Byron Wallace</a> and <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> for introducing me to research, especially when I had no prior experience.
+                  During my Undergraduate study at HKU, I've been advised by <a href="https://www.microsoft.com/en-us/research/people/shumma/">Shuming Ma</a> at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/">Microsoft Research Asia</a>, <a href="https://yulequan.github.io">Lequan Yu</a> at HKU and <a href="https://jxhe.github.io">Junxian He</a> at HKUST. I'm really grateful to <a href="https://www.byronwallace.com">Byron Wallace</a> and <a href="https://sites.google.com/view/drliu/home">Zhonghua Liu</a> for introducing me to research.
               </p>
                 <p>
-                    I am interested in Embodied AI and interpretable machine learning. Specifically, I am working on:
-                    <ul>
-                        <li>Integrating perception, action, and reasoning ability in Embodied AI</li>
-                        <li>Flipping test predictions via modifying training points:
-                            <a href="https://arxiv.org/pdf/2305.12809.pdf">[Relabeling </a>,
-                            <a href="https://arxiv.org/abs/2302.02169">Removing]</a>
+                  My long-term goal is to build trustworthy autonomous learning systems. I develop interpretability methods to explain model decisions, support data curation, and improve model training. <br>
+                  I am currently focused on large foundation models for embodied AI. Before this, I worked on large language models.
                         </li>
                     </ul>
                 </p>
